feat: add loading and lottie

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-lottie": "1.2.10",
     "next": "14.2.3",
     "next-intl": "3.12.1",
     "next-themes": "0.3.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-lottie": "1.2.4"
   },
   "devDependencies": {
     "@types/node": "20.12.8",
