--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-intl": "3.12.1",
     "next-themes": "0.3.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-icons": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "20.12.8",
