--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "no-unused-vars": "warn",
+    "no-unused-vars": "error",
     "no-duplicate-imports": "error",
     "indent": ["error", 2]
   }
