--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-themes": "0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "^5.2.0"
+    "react-icons": "5.2.0",
+    "swiper": "11.1.1"
   },
   "devDependencies": {
     "@types/node": "20.12.8",
